--- a/main.html
+++ b/main.html
@@ -9,7 +9,8 @@
 <body>
 	<!-- the entire body must be written by student -->
 	
-	<table>
+	<!-- Semantic Table -->
+    <table>
         <thead>
             <tr>
                 <th>Roll Number</th>
@@ -32,20 +33,24 @@
         </tbody>
     </table>
 
+    <!-- Heading -->
     <h2>List of medias</h2>
 
+    <!-- Ordered List with Media Items -->
     <ol>
         <li>
-            <img src="https://picsum.photos/id/123/200/300" alt="Sample image">
+            <img src="https://picsum.photos/id/123/200/300" alt="Random Image">
         </li>
         <li>
             <video controls>
                 <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+                Your browser does not support the video tag.
             </video>
         </li>
         <li>
             <audio controls>
                 <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+                Your browser does not support the audio tag.
             </audio>
         </li>
     </ol>
